--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ textarea {
 .hero {
     width: 100%;
     background-color: #000;
-    background-image:url(".img/image.png");
+    background-image:url(../img/image.png);
 }
 
 .hero .container{
